--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,286 @@
-sijsjg
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{url_for('static', filename="assets/css/style.css")}}">
+    <title>Sketch2Code</title>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">Sketch2Code</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#sectionOne">How it works</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#sectionTwo">How to draw</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#sectionThree">FAQ</a>
+                    </li>
+                    {% if session['id'] is not none %}
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary text-white mx-2" href="{{url_for('signin')}}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary text-white" href="{{url_for('signup')}}">Register</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="btn btn-primary text-white" href="{{url_for('dashboard')}}">dashboard</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="py-5">
+        <div class="container py-3">
+            <div class="row">
+                <div class="col-md-12 mb-3">
+                    <div class="col-md-6 mx-auto">
+                        {% if error %}
+                        <div class="alert alert-danger text-center" role="alert">
+                            {{ error }}
+                        </div>
+                    {% endif %}
+                    {% if success %}
+                        <div class="alert alert-success text-center" role="alert">
+                            {{ success }}
+                        </div>
+                    {% endif %}
+                    </div>
+                </div>
+
+                <div class="col-md-6 px-3" id="content">
+                    <h2>Transform any hand-drawn design into a HTML code with AI</h2>
+                    <p>A Custom Vision Model detects meaningful design elements in an
+                        image. The model was trained to perform object recognition
+                        against HTML hand-drawn patterns</p>
+                        <div>
+                            {% if session['id'] is not none %}
+                                <a class="btn btn-primary text-white" href="{{url_for('signin')}}">Login</a>
+                                <a class="btn btn-primary text-white me-2" href="{{url_for('signup')}}">Register</a>
+                            {% else %}
+                                <a class="btn btn-primary text-white" href="{{url_for('dashboard')}}">dashboard</a>
+                            {% endif %}
+                        </div>
+                </div>
+                <div class="col-md-6">
+                    <img class="w-100" src="{{url_for('static', filename="assets/images/team_presentation_4.svg")}}" />
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="sectionOne" class="py-5">
+        <div class="container py-3">
+            <div class="row">
+                <div class="col-md-6 d-flex flex-column justify-content-center">
+                    <h2>HOW IT WORKS</h2>
+                    <p class="w-75">We can use Computer Vision to build a system that
+                        understands what a designer has drawn on a
+                        whiteboard, then translates that understanding to
+                        HTML code. This way we can generate HTML code
+                        directly from a hand-drawn image.</p>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-6 mx-auto mb-3">
+                            <div>
+                                <h3>1</h3>
+                                <h4>Detect design patterns</h4>
+                                <p>A Custom Vision Model detects
+                                    meaningful design elements in
+                                    an image. The model was trained
+                                    to perform object recognition
+                                    against HTML hand-drawn
+                                    patterns.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mx-auto mb-3">
+                            <div>
+                                <h3>2</h3>
+                                <h4>Build HTML</h4>
+                                <p>A valid HTML is generated
+                                    according to the detected layout
+                                    of the design elements.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mx-auto mb-3">
+                            <div>
+                                <h3>3</h3>
+                                <h4>Understand handwritten</h4>
+                                <p>Each detected element is passed
+                                    through a Text Recognition
+                                    Service to extract handwritten
+                                    content.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="sectionTwo" class="py-5">
+        <h2>HOW TO DRAW ...?</h2>
+        <div class="container my-5">
+            <div class="row align-items-center d-flex">
+                <div class="col-md-4 my-2 order-1 order-md-0">
+                    <div class="content py-3">
+                        <h3>spacing between elements</h3>
+                        <p>A Custom Vision Model detects meaningful design
+                        elements in an image. The model was trained to perform
+                        object recognition against HTML hand-drawn patterns</p>
+                    </div>
+                </div>
+                <div class="col-md-4 my-2 d-flex justify-content-center">
+                    <h2>01</h2>
+                </div>
+                <div class="col-md-4 my-2">
+                    <img src="{{url_for('static', filename="assets/images/1.jpg")}}" class="img-fluid rounded">
+                </div>
+            </div>
+
+            <div class="row align-items-center d-flex">
+                <div class="col-md-4 my-2 order-1 order-md-0">
+                    <div class="content py-3">
+                        <h3>What type of pen?</h3>
+                        <p>AEach detected element is passed through a Text
+                            Recognition Service to extract handwritten content.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 my-2 d-flex justify-content-center">
+                    <h2>02</h2>
+                </div>
+                <div class="col-md-4 my-2">
+                    <img src="{{url_for('static', filename="assets/images/2.jpg")}}" class="img-fluid rounded">
+                </div>
+            </div>
+
+            <div class="row align-items-center d-flex">
+                <div class="col-md-4 my-2 order-1 order-md-0">
+                    <div class="content py-3">
+                        <h3>How to write handwriting</h3>
+                        <p>Information about the detected objects and the objects’
+                            position inside the image is fed into an algorithm that
+                            generates the underlying structure.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 my-2 d-flex justify-content-center">
+                    <h2>03</h2>
+                </div>
+                <div class="col-md-4 my-2">
+                    <img src="{{url_for('static', filename="assets/images/3.jpg")}}" class="img-fluid rounded">
+                </div>
+            </div>
+
+            <div class="row align-items-center d-flex">
+                <div class="col-md-4 my-2 order-1 order-md-0">
+                    <div class="content py-3">
+                        <h3>Navbar</h3>
+                        <p>A valid HTML is generated according to the detected
+                            layout of the design elements.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 my-2 d-flex justify-content-center">
+                    <h2>04</h2>
+                </div>
+                <div class="col-md-4 my-2">
+                    <img src="{{url_for('static', filename="assets/images/navbar.jpg")}}" alt="" class="img-fluid rounded">
+                </div>
+            </div>
+
+            <div class="row align-items-center d-flex">
+                <div class="col-md-4 my-2 order-1 order-md-0">
+                    <div class="content py-3">
+                        <h3>All Elements</h3>
+                        <p>All Type of Element And How To Draw
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 my-2 d-flex justify-content-center">
+                    <h2>05</h2>
+                </div>
+                <div class="col-md-4 my-2">
+                    <img src="{{url_for('static', filename="assets/images/elements.jpg")}}" alt="" class="img-fluid rounded">
+                </div>
+            </div>
+            
+        </div>
+    </section>
+
+    <section id="sectionThree">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="text-center mb-4">Frequently Asked Questions</h3>
+                </div>
+                <div class="col-md-12 mb-3">
+                    <a class="btn btn-primary w-50 d-block mx-auto py-3" data-bs-toggle="collapse" href="#collapse">
+                        how is your sevice will help me to create my design?
+                    </a>
+                    <div class="collapse w-50 mx-auto" id="collapse">
+                        <div class="card card-body">
+                            it will help you to convert your handwritten wireframe into real website 
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 mb-3">
+                    <a class="btn btn-primary w-50 d-block mx-auto py-3" data-bs-toggle="collapse" href="#collapse2">
+                        is your service free?
+                    </a>
+                    <div class="collapse w-50 mx-auto" id="collapse2">
+                        <div class="card card-body">
+                            yes, it's completely free
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 mb-3">
+                    <a class="btn btn-primary w-50 d-block mx-auto py-3" data-bs-toggle="collapse" href="#collapse3">
+                        is your service will make my design process faster?
+                    </a>
+                    <div class="collapse w-50 mx-auto" id="collapse3">
+                        <div class="card card-body">
+                            yes it will make the process much faster
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 mb-3">
+                    <a class="btn btn-primary w-50 d-block mx-auto py-3" data-bs-toggle="collapse" href="#collapse4">
+                        what about manging my past designs?
+                    </a>
+                    <div class="collapse w-50 mx-auto" id="collapse4">
+                        <div class="card card-body">
+                            you will have a dashboard, you can monitor and update on your past projects from it
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
