--- a/templates/index.html
+++ b/templates/index.html
@@ -180,7 +180,7 @@
             <div class="row align-items-center d-flex">
                 <div class="col-md-4 my-2 order-1 order-md-0">
                     <div class="content py-3">
-                        <h3>How to write handwriting</h3>
+                        <h3>How to write handwriting & No Border</h3>
                         <p>Information about the detected objects and the objects’
                             position inside the image is fed into an algorithm that
                             generates the underlying structure.
