--- a/templates/inc/button.html
+++ b/templates/inc/button.html
@@ -1,1 +1,1 @@
-<button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-primary">{{ x['body'] }}</button>
